--- a/realtime_dwd/realtime-dwd-base-log/pom.xml
+++ b/realtime_dwd/realtime-dwd-base-log/pom.xml
@@ -3,36 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>gmall2025_realtime</artifactId>
+        <artifactId>realtime_dwd</artifactId>
         <groupId>com.matthew</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>realtime_dwd</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>realtime-dwd-base-log</module>
-    </modules>
+    <artifactId>realtime-dwd-base-log</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    <dependencies>
-        <dependency>
-            <groupId>com.matthew</groupId>
-            <artifactId>realtime_common</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.ververica</groupId>
-            <artifactId>flink-connector-mysql-cdc</artifactId>
-        </dependency>
-
-    </dependencies>
 
 </project>
