--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,13 @@
                 <version>1.4.0</version>
             </dependency>
 
+            <!--StarRocks-Connector依赖-->
+            <dependency>
+                <groupId>com.starrocks</groupId>
+                <artifactId>flink-connector-starrocks</artifactId>
+                <version>1.2.9_flink-1.17</version>
+            </dependency>
+
             <dependency>
                 <groupId>commons-beanutils</groupId>
                 <artifactId>commons-beanutils</artifactId>
